--- a/style.css
+++ b/style.css
@@ -296,6 +296,8 @@ section div ul li a:hover {
 
 .item__things {
     align-items: center;
+    width: 330px;
+    margin: auto;
 }
 
 .item__experience {
@@ -732,6 +734,7 @@ section div ul li a:hover {
     }
     .item__things {
         grid-column: span 2;
+        width: auto;
     }
     .things__icon img {
         width: 4rem;
