--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ hr {
 .nav-logo, .nav-toggle-label {
     display: initial;
 /*    margin: 100vh 1rem 0;
-*/    margin: 1rem ;
+*/    margin: 1rem;
     z-index: 10000;
 }
 
@@ -354,7 +354,7 @@ nav {
     text-align: center;
     background: var(--white);
     color: var(--primary);
-    transform: translateY(-100vh);
+    transform: translateY(-100%);
     transform-origin: top;
     transition: all 300ms ease-in-out;
     position: relative;
@@ -369,8 +369,8 @@ nav {
     align-items: center;
     position: fixed;
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     top: 0;
     z-index: 1000;
 }
