--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,8 @@ nav {
 
 
 .hero {
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
